--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   - ['compiled/screen.css', 'jquery-ui.css', 'compiled/jquery_ui_custom.css'].each do |stylesheet|
     %link{:href => "/stylesheets/#{stylesheet}", :rel => 'stylesheet'}
   %title Hyperlocal CU Prototype
-  = render "layouts/mixpanel"
+  = yield(:head)
 
 %body
   #container
