Refactored teller feedbacks

--- a/frontend/sass/feedback/_row.sass
+++ b/frontend/sass/feedback/_row.sass
@@ -3,6 +3,7 @@ table#timeline
     tr.feedback
       td.date
         width: 10%
+        padding-top: 6px
       td.comment
         color: #333
         p.description
