Added billpay vendor feedback

--- a/app/views/tellers/show.html.haml
+++ b/app/views/tellers/show.html.haml
@@ -1,25 +1,1 @@
-#teller-overview
-
-#timeline-loading Loading...
-
-%table#timeline{:style => 'display: none;'}
-  %tbody.ui-widget-content
-
-= content_for :sidebar do
-  #overview
-  #event-detail-view{:style => "display: none;"}
-
-= content_for :javascript do
-
-  %script{:src => google_js_src, :type => 'text/javascript'}
-
-  :javascript
-    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/tellers/dashboard_controller", "order!app/models/teller"], function(underscore, backbone, TellerDashboardController, Teller) {
-
-      Backbone.emulateHTTP = true;
-
-      var tellerDashboardController = new TellerDashboardController({
-        teller: new Teller(#{@teller.to_json})
-      });
-
-    });
+= render "feedbacks/dashboard", :subject => @teller
