--- a/frontend/sass/feedback/_dashboard.sass
+++ b/frontend/sass/feedback/_dashboard.sass
@@ -1,10 +1,10 @@
-#teller-overview
+#subject-overview
   height: 75px
   padding: 5px 0
   p.meta
     color: $subtle_color
     font-size: 0.83em
-  .teller-info
+  .subject-info
     float: left
     width: 40%
     .avatar
@@ -27,3 +27,4 @@
         margin: 0 0 0.3em
       div.rating
         margin: 0.2em auto
+
