--- a/frontend/views/feedback/subject_overview.handlebars
+++ b/frontend/views/feedback/subject_overview.handlebars
@@ -1,8 +1,8 @@
-<div class="teller-info">
+<div class="subject-info">
   <img src="{{ avatar }}" class="avatar" />
   <div class="name">
     <h2>{{ name }}</h2>
-    <p class="meta">Teller #{{ id }}</p>
+    <p class="meta">{{ meta }}</p>
   </div>
 </div>
 
