--- a/frontend/sass/_social.sass
+++ b/frontend/sass/_social.sass
@@ -22,15 +22,18 @@
       color: #900
 
 .social
-  +speech-bubble(16px)
   .twitter, .facebook
     clear: both
     padding: 0 0 0px
     min-height: 50px
+    font-size: 0.9em
     .form
       +small-button
       input.text
         width: 220px
+    .avatar
+      float: left
+      margin: 2px 10px 0 0
     .icon-and-vote
       float: right
       width: 22px
