--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -10,43 +10,64 @@
   color: #444
   top: 42px
   left: 630px
-  padding: 25px 10px 20px 15px
+  padding: 5px 10px 20px 15px
   border: 1px solid #ccc
   border-width: 1px 1px 1px 0
   +border-right-radius(5px)
   background: #fff
   width: 318px
   min-height: 500px
-  .close
-    float: right
-    position: absolute
-    top: 4px
-    right: 10px
-    font-size: 10px
-  .name-and-location
-    min-height: 60px
-    position: relative
-    padding-right: 30px
-    .avatar
+  .top
+    +clearfix
+    margin: 0 0 15px
+    .date
+      float: left
+      color: $subtle_color
+      font-size: 10px
+    .close
+      float: right
       position: absolute
-      bottom: 3px
-      right: 0
-      padding: 3px
-      background: #fff
-      border: 1px solid #ddd
-      cursor: pointer
+      top: 4px
+      right: 10px
+      font-size: 10px
+  .name-and-amount
+    margin: 0 0 0.5em 0
+    .amount
+      font-size: 16px
+      float: right
+      line-height: 1em
     h3
       font-size: 16px
-      margin: 0 0 0.5em 0
-      em
-        color: #666
-        display: block
-        font-style: normal
-        font-size: 0.70em
-        margin: 5px 0 0 0
-    p.address, p.phone
-      font-size: 11px
-      margin: 0.2em 0
+      line-height: 1em
+
+  .location
+    padding: 5px 0 12px 0
+    font-size: 11px
+    +clearfix
+    .map
+      margin: 0 13px 0 0
+      float: left
+      img
+        width: 130px
+        border: 1px solid #ccc
+    .address
+      h2, h3
+        +reset-box-model
+        line-height: 1.2em
+        color: #444
+        font-weight: bold
+        margin: 0 0 0.3em
+      h2
+        font-size: 15px
+      h3
+        font-size: 11px
+      p
+        line-height: 1.2em
+        margin: 0 0 0.25em
+
+  .social
+    position: absolute
+    bottom: 15px
 
   .available-service
     margin: 10px 0 0
